# mnist-digit-recognition-in-rust

./: Cargo.toml
src/: io.rs  main.rs  matrix.rs  network.py  network.rs  network2.rs  neural.rs  neural2.rs  utils.rs
