[package]
name = "imagerecognizer"
version = "0.1.0"
authors = ["wolfandreh <wolf-andre_hummel@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.23.14"
mnist = "^0.4.1"
chrono = "0.4.39"
make_it_braille = "0.6.0"
rand = "0.9.0"
